[project]
name = "comfyui-projectlogic"
version = "0.1.0"
description = "Project/shot-driven path nodes: derive sequence/movie paths, filenames and frame counts for VFX passes from one hub node."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/matzehali/ComfyUI-projectlogic"

[tool.comfy]
PublisherId = "matzehali"
DisplayName = "Project Logic"
