[project]
name = "comfyui-projectlogicnodehelpers"
version = "0.1.0"
description = "Project/shot-driven path nodes: derive sequence/movie paths, filenames and frame counts for VFX passes from one project hub, plus routers and pack/unpack helpers."
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/matzehali/ComfyUI-ProjectLogicNodeHelpers"

[tool.comfy]
PublisherId = "matzehali"
DisplayName = "Project Logic Node Helpers"
